# rgb-keyboard-language

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.py  pyproject.toml  version.py
.cursor/rules/: keychron-via-hue.mdc  readme.mdc  rgb-keyboard-language-windows.mdc
.github/workflows/: release.yml
keychron-via-hue/: README.md  pyproject.toml  pytest.ini  requirements-dev.txt
keychron-via-hue/src/keychron_via_hue/: __init__.py  cli.py  color_parser.py  hue_adjuster.py  qmk_hid.py
keychron-via-hue/tests/: __init__.py  test_cli.py  test_color_parser.py  test_hue_adjuster.py  test_qmk_hid.py
rgb-keyboard-language-windows/: README.md  build.py  pyproject.toml
rgb-keyboard-language-windows/src/rgb_keyboard_language_windows/: config.py  hue_sender.py  keyboard_hid.py  layout_win.py  main.py  tray.py
rgb-keyboard-language-windows/tests/: __init__.py  test_color_matching.py
src/rgb_keyboard_language_windows/: __init__.py  config.py  hue_sender.py  keyboard_hid.py  layout_base.py  logging_.py  main.py  tray.py
tests/: test_config.py
